# muse-lcm-2

./: CMakeLists.txt  attitude_estimator_lcm.cpp  cmake2.txt  docker-compose.yml  dockerfile  leg_odometry_estimator_lcm.cpp  readme.md  requirement.txt  run.md  run_docker.sh  simple_attitude_estimator.cpp  simple_leg_odometry_estimator.cpp
src/extra/: attitude.cpp  leg_odometry.cpp  simple_attitude_estimator_lcm.cpp
src/extra/src/: state_estimator.cpp
src/extra/src/plugins/: attitude_estimation_plugin.cpp  contact_detection_plugin.cpp  leg_odometry_plugin.cpp  sensor_fusion_plugin.cpp
src/include/state_estimator/: lib.hpp
src/include/state_estimator_msgs/: attitude_t.hpp  contact_detection_t.hpp  header_t.hpp  imu_t.hpp  joint_state_with_acceleration_t.hpp  leg_odometry_t.hpp  odometry.hpp  point_t.hpp  pose_with_covariance_t.hpp  quaternion_t.hpp  sensor_fusion_t.hpp  twist_t.hpp  twist_with_covariance_t.hpp  vector_t.hpp
src/msgs/lcm/: attitude_t.lcm  contact_detection_t.lcm  header_t.lcm  imu.lcm  joint_state_with_acceleration_t.lcm  leg_odometry_t.lcm  odometry_t.lcm  point_t.lcm  pose_with_covariance_t.lcm  quaternion_t.lcm  sensor_fusion_t.lcm  twist_t.lcm  twist_with_covariance_t.lcm  vector_t.lcm
src/src/: state_estimator_node.cpp
src/src/plugin/: attitude_node.cpp  contact_detection.cpp  leg_odometry_lcm.cpp
